# metra

./: .gitignore  Cargo.toml  LICENSE  README.md  actions.json  build.sh  rustfmt.toml
example/: Cargo.toml
example/src/: main.rs
game/: Cargo.toml
game/src/: main.rs  manifest
metra/: .gitignore  Cargo.toml
metra-station/: Cargo.toml
metra-station/src/: main.rs
metra/src/: asset.rs  default_fragment.glsl  lib.rs  logger.rs  prelude.rs  resource.rs  sys.rs  universal_vertex.glsl
metro/: Cargo.toml
metro/src/: default_fragment.glsl  lib.rs  logger.rs  prelude.rs  resource.rs  sys.rs  universal_vertex.glsl
shell/: index.html  maudio.mjs  metra.mjs  metro.mjs  shadower.html  soundtest.html
shell/assets/: .gitignore
src/: lib.rs  native.rs  web.rs
station/: Cargo.toml
station/src/: main.rs
