[workspace]
resolver = "3"
members = ["metra", "game", "metra-station"]
default-members = ["metra"]

# I wish I could specify these profile options per-crate, but alas
[profile.dev]
panic = "abort"

[profile.dev.package.'*']
debug = "none"
strip = true
codegen-units = 1
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3

[profile.release.package.'*']
debug = "none"
strip = true
codegen-units = 1
opt-level = 3
