[package]
name = "metra"
description = ""
version = "0.0.1-ALPHA"
edition = "2024"
license = "Apache-2.0"
# eventually it might be a GitLab repo, but for now we're on GH
repository = "https://github.com/addiesh/metra"
readme = "../README.md"

[dependencies]
# logging facade
log = "0.4.27"
# memory allocator
dlmalloc = { version = "0.2.8", features = ["global"] }
# serialization
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }

## stack-allocated vector
#smallvec = { version = "1.15.0" }

## font rendering
#rusttype = { version = "0.9.3", default-features = false, features = ["libm-math"] }

## compression
# flate2 = "1.1.1"